# jira-evm-pipeline

./: .gitignore  README.md  parse_ims_xml.py  pyproject.toml  sync_ims_to_jira.py
tests/: test_parse_ims_xml.py
tests/fixtures/: sample_ims_export.xml
