[project]
name = "jira-ev-pipeline"
version = "0.1.0"
description = "Weekly IMS to Jira sync for Earned Value pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jira-integration-wrapper @ git+https://github.com/eklarson/jira-integration-wrapper.git",
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 100